<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CambioProject</string>
    <string name="title_home">Alon Git Test</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    //home screen values
    <string name="meantime_text">"afterwards there's gonna be ana animation here</string>
    <string name="btnSettingsText">play!</string>
    <string name="btnHowToText">how to play?</string>
    <string name="btnAboutUsText">About Us</string>
    <string name="title_activity_game_settings">gameSettings</string>
    // game settings values
    <string name="txtNumOf">number of players:</string>
    <string name="txtCambioLevel">Cambio Level:</string>
    <string name="txtAvatar">choose an avatar!</string>

    //about us values
    <string name="txtAbout">We are couple of childhood friends who admire the cambio game and
    passionate about programming. We live at the state of Israel. We look forward to develop this game and
        to distribute it as much as we can. If you encounter in a bug or you have a proposal to improve the game,
        please contact us:
</string>
    <string name="txtSub">Subject:</string>
    <string name="txtBody">Message:</string>
</resources>
