<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/homeLayout1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:text="@string/meantime_text"
        android:id="@+id/TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
    </TextView>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homeLayout2"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:gravity="center"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    >
<Button
    android:id="@+id/settingsButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:text="@string/btnSettingsText"
    android:textAlignment="center"
    android:onClick="settingsButtonClick"/>
    <Button
        android:id="@+id/howToButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/settingsButton"
        android:text="@string/btnHowToText"
        android:textAlignment="center"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/howToButton"
        android:text="@string/btnAboutUsText"
        android:id="@+id/aboutUsButton"/>
</RelativeLayout>
</RelativeLayout>